--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Unblocked Games</title>
+</head>
+<body>
+    <h1>Welcome to the Unblocked Games Website</h1>
+    <div id="proxy-options">
+        <button onclick="window.location.href='/uv/'">Ultraviolet Proxy</button>
+        <button onclick="window.location.href='/rammerhead/'">Rammerhead Proxy</button>
+    </div>
+    <div id="games-list">
+        <h2>Games</h2>
+        <button onclick="openGame('https://examplegame.com')">Game 1</button>
+        <button onclick="openGame('https://examplegame2.com')">Game 2</button>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
