--- a/public/index.html
+++ b/public/index.html
@@ -3,20 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Unblocked Games</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to the Unblocked Games Website</h1>
-    <div id="proxy-options">
-        <button onclick="window.location.href='/uv/'">Ultraviolet Proxy</button>
-        <button onclick="window.location.href='/rammerhead/'">Rammerhead Proxy</button>
+    <h1>Unblocked Games Portal</h1>
+    <div>
+        <button onclick="window.location.href='https://your-ultraviolet-host-link/'">Ultraviolet Proxy</button>
+        <button onclick="window.location.href='https://your-rammerhead-host-link/'">Rammerhead Proxy</button>
     </div>
-    <div id="games-list">
+    <div>
         <h2>Games</h2>
-        <button onclick="openGame('https://examplegame.com')">Game 1</button>
+        <button onclick="openGame('https://examplegame1.com')">Game 1</button>
         <button onclick="openGame('https://examplegame2.com')">Game 2</button>
     </div>
-    <script src="script.js"></script>
+    <script>
+        function openGame(url) {
+            const newWindow = window.open(url, '_blank', 'noopener,noreferrer');
+            newWindow.opener = null;
+        }
+    </script>
 </body>
 </html>
