--- a/public/index.html
+++ b/public/index.html
@@ -3,20 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unblocked Games</title>
+    <title>Advanced Unblocked Games</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Unblocked Games Portal</h1>
-    <div>
-        <button onclick="window.location.href='https://your-ultraviolet-host-link/'">Ultraviolet Proxy</button>
-        <button onclick="window.location.href='https://your-rammerhead-host-link/'">Rammerhead Proxy</button>
-    </div>
-    <div>
+    <header class="hero">
+        <h1>Welcome to Unblocked Games</h1>
+        <p>Play games and browse freely with integrated proxies.</p>
+        <button onclick="window.location.href='#games'">Explore Games</button>
+    </header>
+
+    <section id="games" class="games-section">
         <h2>Games</h2>
-        <button onclick="openGame('https://examplegame1.com')">Game 1</button>
-        <button onclick="openGame('https://examplegame2.com')">Game 2</button>
-    </div>
+        <div class="game-card" onclick="openGame('https://examplegame.com')">
+            <img src="game1.jpg" alt="Game 1">
+            <h3>Game 1</h3>
+        </div>
+        <div class="game-card" onclick="openGame('https://examplegame2.com')">
+            <img src="game2.jpg" alt="Game 2">
+            <h3>Game 2</h3>
+        </div>
+    </section>
+
+    <section id="proxy" class="proxy-section">
+        <h2>Proxies</h2>
+        <button onclick="window.location.href='https://ultraviolet-proxy.com'">Ultraviolet Proxy</button>
+        <button onclick="window.location.href='https://rammerhead-proxy.com'">Rammerhead Proxy</button>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Unblocked Games. All rights reserved.</p>
+    </footer>
+
     <script>
         function openGame(url) {
             const newWindow = window.open(url, '_blank', 'noopener,noreferrer');
